etc/mongo-express/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i-mongoui
  labels:
    app: i-mongoui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: i-mongoui
  template:
    metadata:
      labels:
        app: i-mongoui
    spec:
      containers:
        - name: i-mongoui
          image: mongo-express
          ports:
            - containerPort: 8081
