etc/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: i-mongoui-service
spec:
  selector:
    app: i-mongoui
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
